--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Bungee+Inline&display=swap" rel="stylesheet">
     <title>Akan</title>
 </head>
 <body class="container-fluid">
     <div class="jumbotron row">
-        <img src= "https://bit.ly/2URGHNC" class= "col-12 col-sm-2">
+        <img src= "https://bit.ly/39EUP0z" class= "col-12 col-sm-2">
         <div class="col-10">
             <h1>AKAN NAMES GENERATOR</h1>
             <p >Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born and also the gender.</p>
@@ -56,9 +57,7 @@
             <button type="submit" onclick="getName();return false;" value="submit">submit</button>
             </div>
 
-            <div>
-                <p id="post"></p>
-            </div>
+           
         </form>
     </div>
     <script src="script.js"></script>
